--- a/design4green/home_page/templates/index/consommation.html
+++ b/design4green/home_page/templates/index/consommation.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <hr>
-        <div class="row">
+        <div class="row justify-content-md-center">
             <div class='col-md-9'>
                 <canvas id="myChart" width="800" height="400"></canvas>
             </div>
