--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -35,9 +35,17 @@
                     <p>
                     <table class="table table-hover">
                         <tr>
-                            <td>Ville: {{ uloc.l_ville }} - {{ uloc.l_cp }}</td>
-                            
+                            <td>Ville:</td>
+                            <td>{{ uloc.l_ville }} - {{ uloc.l_cp }}</td>
                         </tr>
+                        <tr>
+                            <td>Type de foyer:</td>
+                            <td>{{ uloc.l_type }}</td>
+                        </tr>
+                    <tr>
+                        <td>Type de chauffage</td>
+                        <td>{{ uloc.l_type }}</td>
+                    </tr>
                     </table>
                 </div>
 
