--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -39,12 +39,12 @@
                             <td>{{ uloc.l_ville }} - {{ uloc.l_cp }}</td>
                         </tr>
                         <tr>
-                            <td>Type de foyer:</td>
-                            <td>{{ uloc.l_type }}</td>
+                            <td>Année de construction:</td>
+                            <td>{{ uloc.l_annee }}</td>
                         </tr>
                     <tr>
                         <td>Type de chauffage</td>
-                        <td>{{ uloc.l_type }}</td>
+                        <td>{{ uloc.l_chauff }}</td>
                     </tr>
                     </table>
                 </div>
