--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -39,6 +39,10 @@
                             <td>{{ uloc.l_ville }} - {{ uloc.l_cp }}</td>
                         </tr>
                         <tr>
+                            <td>Nombre de pièces:</td>
+                            <td>{{ uloc.l_nb_pieces }}</td>
+                        </tr>
+                        <tr>
                             <td>Année de construction:</td>
                             <td>{{ uloc.l_annee }}</td>
                         </tr>
