--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -86,7 +86,7 @@
                         </tbody>
                     </table>
 
-                    <button type="button" class="btn btn-secondary"><a href="{% url 'homePage:conso' user.id %}">Voir plus </a></button>
+                    <button type="button" class="btn btn-success"><a href="{% url 'homePage:conso' user.id %}">Voir plus </a></button>
 
 
                 </div>
