--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -85,9 +85,9 @@
                             {% endfor %}
                         </tbody>
                     </table>
-
-                    <button type="button" class="btn btn-success"><a href="{% url 'homePage:conso' user.id %}">Voir plus </a></button>
-
+                    <div class="col text-center">
+                        <button type="button" class="btn login_btn"><a href="{% url 'homePage:conso' user.id %}">Voir plus </a></button>
+                    </div>
 
                 </div>
             </div>
