--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -85,7 +85,7 @@
                             {% endfor %}
                         </tbody>
                     </table>
-                    <div class="col text-center">
+                    <div class="col justify-content-md-center">
                         <button type="button" class="btn login_btn"><a href="{% url 'homePage:conso' user.id %}">Voir plus </a></button>
                     </div>
 
