--- a/design4green/home_page/templates/index/index.html
+++ b/design4green/home_page/templates/index/index.html
@@ -36,6 +36,11 @@
                         <input type="submit" value="Valider" class="btn float-right login_btn">
                     </div>
                 </form>
+                <form action="/admin" method="post">
+                    <div class="form-group">
+                        <input type="submit" value="Administration" class="btn login_btn">
+                    </div>
+                </form>
             </div>
             <div class="card-footer">
                 <div class="d-flex justify-content-center">
