--- a/design4green/home_page/templates/index/index.html
+++ b/design4green/home_page/templates/index/index.html
@@ -38,7 +38,7 @@
                 </form>
                 <form action="/admin" method="post">
                     <div class="form-group">
-                        <input type="submit" value="Administration" class="btn login_btn">
+                        <input type="submit" value="Admin" class="btn login_btn">
                     </div>
                 </form>
             </div>
