--- a/design4green/home_page/templates/index/index.html
+++ b/design4green/home_page/templates/index/index.html
@@ -36,7 +36,11 @@
                         <input type="submit" value="Valider" class="btn float-right login_btn">
                     </div>
                 </form>
-                <button type="button" class="btn login_btn"><a href="/admin/">Admin</a></button>
+                <form action="/admin/">
+                    <div class="form-group">
+                        <input type="submit" value="Admin" class="btn login_btn">
+                    </div>
+                </form>
             </div>
             <div class="card-footer">
                 <div class="d-flex justify-content-center">
