--- a/design4green/home_page/templates/index/index.html
+++ b/design4green/home_page/templates/index/index.html
@@ -17,20 +17,20 @@
                 <h3>Connexion</h3>
             </div>
             <div class="card-body">
-                <form>
+                <form method="post">
                     {% csrf_token %}
                     <div class="input-group form-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
-                        <input type="text" class="form-control" placeholder="Nom d'utilisateur">
+                        <input type="text" id="user" name="user" class="form-control" placeholder="Nom d'utilisateur">
 
                     </div>
                     <div class="input-group form-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-key"></i></span>
                         </div>
-                        <input type="password" class="form-control" placeholder="Mot de passe">
+                        <input type="password" id="mdp" name="mdp" class="form-control" placeholder="Mot de passe">
                     </div>
                     <div class="form-group">
                         <input type="submit" value="Valider" class="btn float-right login_btn">
