--- a/design4green/home_page/templates/topbar/topbar.html
+++ b/design4green/home_page/templates/topbar/topbar.html
@@ -25,7 +25,7 @@
                 <a class="nav-link" href="{% url 'homePage:help' user.id %}">Aide</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Deconnexion</a>
+                <a class="nav-link" href="/">Deconnexion</a>
             </li>
         </ul>
   </div>
